Fixed blurry text in toasts

--- a/assets/scss/main.sass
+++ b/assets/scss/main.sass
@@ -623,6 +623,11 @@ nav.top-navbar
 
 .toasted-container
   align-items: center
+  justify-content: center
+  left: 0 !important
+  right: 0 !important
+  -webkit-transform: none !important
+  transform: none !important
 
 meter
   width: 100%
